--- a/scss/_codemirror.scss
+++ b/scss/_codemirror.scss
@@ -2,10 +2,8 @@ $textarea-cols: 40;
 $textarea-rows: 15;
 
 .CodeMirror {
-  height: ceil($textarea-rows * 1.2em);
+  height: 20rem;
   direction: ltr;
-  background: #282a36 !important;
-  color: #f8f8f2 !important;
 }
 
 #inline_editor_outer .CodeMirror {
@@ -13,21 +11,20 @@ $textarea-rows: 15;
 }
 
 .insertRowTable .CodeMirror {
-  height: ceil($textarea-rows * 0.6em);
-  width: ceil($textarea-cols * 0.6em);
+  min-height: ceil($textarea-rows * 0.6em);
+  min-width: ceil($textarea-cols * 0.6em);
   border: 1px solid #a9a9a9;
 }
 
-#pma_console .CodeMirror-gutters, .CodeMirror-gutters {
-  background-color: #303338 !important;
-  color: #f8f8f2 !important;
+#pma_console .CodeMirror-gutters {
+  background-color: initial;
   border: none;
 }
 
 span {
   &.cm-keyword,
   &.cm-statement-verb {
-    color: #ff79c6 !important;
+    color: #909;
   }
 
   &.cm-variable {
@@ -43,7 +40,7 @@ span {
   }
 
   &.cm-operator {
-    color: #ff79c6 !important;
+    color: fuchsia;
   }
 
   &.cm-mysql-word {
@@ -51,11 +48,11 @@ span {
   }
 
   &.cm-builtin {
-    color: #f22;
+    color: #f00;
   }
 
   &.cm-variable-2 {
-    color: #fff !important;
+    color: #f90;
   }
 
   &.cm-variable-3 {
@@ -67,7 +64,7 @@ span {
   }
 
   &.cm-number {
-    color: #bd93f9 !important;
+    color: teal;
   }
 }
 
@@ -94,13 +91,4 @@ span {
     font-family: monospace;
     font-weight: bold;
   }
-}
-
-.cm-s-default .cm-string {
-  color: #f22;
-}
-
-.CodeMirror-cursor {
-  color: #f8f8f2 !important;
-  border-color: #f8f8f2 !important; 
 }
