--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,7 +15,7 @@ $navi-background: #40434b;
 $navi-pointer-color: #f3f3f3;
 
 // background of the pointer in navi frame
-$navi-pointer-background: #303338;
+$navi-pointer-background: #f3f3f3;
 
 // main frame
 
@@ -38,14 +38,6 @@ $browse-marker-color: #f3f3f3;
 // background of the marker (visually marks row by clicking on it) in browse mode
 $browse-marker-background: #484d56;
 
-// fonts
-
-// the font family as a valid css font family value, if not set the browser default will be
-// used (depending on browser, DTD and system settings)
-$font-family: sans-serif;
-// fixed width font family, used in textarea
-$font-family-fixed: monospace;
-
 // tables
 
 // border
@@ -60,9 +52,35 @@ $bg-one: #383c42;
 $bg-two: #303338;
 
 // Bootstrap
+// ---------
+
+// Body
+
+$body-color: $main-background;
+
+// Typography
+
+$font-family-base: sans-serif;
+$font-family-monospace: monospace;
+
+$font-size-base: 0.82rem;
+
+// Tables
+
+$table-cell-padding: 0.1em 0.3em;
+$table-cell-padding-sm: $table-cell-padding;
+$table-head-bg: #fff;
+$table-head-color: $th-color;
+$table-striped-order: even;
+$table-accent-bg: #dfdfdf;
+$table-hover-color: $browse-pointer-color;
+$table-border-color: #fff;
+$table-border-width: 0;
+
+// Buttons
 
 $enable-gradients: true;
-$enable-shadows: false;
+$enable-shadows: true;
 $enable-transitions: false;
 
 $primary: #ddd;
@@ -70,3 +88,55 @@ $secondary: #ddd;
 
 $btn-border-radius: 0.85rem;
 $btn-line-height: 1.15;
+
+// Dropdowns
+
+$dropdown-padding-y: 0;
+$dropdown-item-padding-y: 0;
+$dropdown-item-padding-x: 0;
+
+// Forms
+
+$form-check-input-margin-y: 0.1rem;
+
+// Navbar
+
+$enable-caret: false;
+$navbar-padding-y: 0;
+$navbar-padding-x: 0;
+$navbar-light-color: #235a81;
+$navbar-light-hover-color: #235a81;
+$navbar-light-active-color: #235a81;
+$navbar-light-disabled-color: #235a81;
+
+// Card
+
+$card-border-color: #aaa;
+$card-bg: #eee;
+$card-cap-bg: #fff;
+
+// Breadcrumbs
+
+$breadcrumb-padding-y: 0.1rem;
+$breadcrumb-margin-bottom: 0;
+$breadcrumb-bg: #888;
+$breadcrumb-divider-color: #fff;
+$breadcrumb-divider: quote("»");
+$breadcrumb-border-radius: 0;
+
+// Modals
+
+$modal-inner-padding: 0.75rem;
+$modal-footer-margin-between: 0.1rem;
+$modal-header-padding-y: 0.4rem;
+
+// Alert
+
+$alert-margin-bottom: 0.5em;
+$alert-border-radius: 5px;
+
+// List group
+
+$list-group-bg: inherit;
+$list-group-item-padding-x: 0;
+$list-group-item-padding-y: 0;
